generalize job resource authority
